# panpipe

./: .gitignore  PanPipe.cabal  PanPipe.hs  PanPipe.lhs  README  README.md  default.nix  nixpkgs.nix  panpipe.cabal  panpipe.hs  panpipe.lhs  pp.hs  release.nix  shell.nix  test-real.hs  test.hs  test.sh
panpipe/: Main.hs
src/: PanPipe.hs
test/: Main.hs
