name:                PanPipe
version:             0.2.0.0
synopsis:            Pandoc filter to execute code blocks
homepage:            http://chriswarbo.net/essays/activecode
license:             PublicDomain
license-file:        LICENSE
author:              Chris Warburton
maintainer:          chriswarbo@gmail.com
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    TypeSynonymInstances
                     , FlexibleInstances
                     , ScopedTypeVariables
                     , FlexibleContexts
                     , OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , CPP
                     , DeriveDataTypeable
                     , MultiParamTypeClasses
                     , PatternGuards
                     , ViewPatterns
                     , TupleSections
                     , OverlappingInstances
                     , RelaxedPolyRec
  build-depends:       base                  >=4.7  && <4.10
                     , unix                  >=2.7  && <2.8
                     , process               >=1.2  && <1.7
                     , Cabal                 >=1.18 && <1.25
                     , filepath              >=1.3  && <1.5
                     , directory             >=1.2  && <1.3
                     , bytestring            >=0.10 && <0.11
                     , containers            >=0.5  && <0.6
                     , parsec                >=3.1  && <3.2
                     , mtl                   >=2.2  && <2.3
                     , text                  >=1.2  && <1.3
                     , extensible-exceptions >=0.1  && <0.2
                     , old-locale            >=1.0  && <1.1
                     , time                  >=1.4  && <1.9
                     , network               >=2.6  && <2.7
                     , binary                >=0.7  && <0.9
                     , data-default          >=0.5  && <0.6
                     , random                >=1.1  && <1.2
                     , old-time              >=1.1  && <1.2
                     , pandoc                >=1.19 && <1.20
                     , pandoc-types
                     , temporary
  
executable panpipe
  hs-source-dirs:      panpipe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       PanPipe

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.10
                     , PanPipe
                     , QuickCheck
                     , tasty >= 0.7
                     , tasty-quickcheck
                     , pandoc
                     , pandoc-types
                     , temporary
                     , unix
                     , process
                     , containers
