name:                panpipe
version:             0.4.0.0
synopsis:            Pandoc filter to execute code blocks
description:         Executes pandoc code blocks annotated with 'pipe'
homepage:            http://chriswarbo.net/projects/activecode
license:             PublicDomain
license-file:        LICENSE
author:              Chris Warburton
maintainer:          chriswarbo@gmail.com
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: http://chriswarbo.net/git/panpipe.git
                     
library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     PanPipe
  build-depends:       base         >=4.7
                     , directory
                     , pandoc-types >=1.20 && < 2
                     , process      >=1.2
                     , temporary    >=1.3
                     , text         >=1.2
                     , unix         >=2.7

executable panpipe
  hs-source-dirs:      panpipe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7
                     , panpipe

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base             >=4.7
                     , panpipe
                     , pandoc-types >= 1.20 && < 2
                     , QuickCheck       >=2.13
                     , tasty            >=1.2
                     , tasty-quickcheck >=0.10
                     , text             >=1.2
